# tc_capture_new

./: CMakeLists.txt  audio_capture.h  audio_capture_factory.h  capture_message.h  capture_message_maker.cpp  capture_message_maker.h  desktop_capture.cpp  desktop_capture.h  desktop_capture_factory.h  dll_main.cpp  inject_params.h  monitor_util.h  readme.md  tc_capture.cpp  tc_capture.h
win/: client_ipc_manager.cpp  client_ipc_manager.h  client_manager.cpp  client_manager.h  dll_main.cpp  hook_api.h  inject_params.h
win/audio/: audio_capture.h  audio_capture_factory.cpp  audio_capture_factory.h  audio_file_saver.cpp  audio_file_saver.h  wasapi_audio_capture.cpp  wasapi_audio_capture.h
win/desktop_capture/: cursor_capture.cpp  cursor_capture.h  dda_capture.cpp  dda_capture.h  desktop_capture.cpp  desktop_capture.h  monitor_util.h  win_desktop_capture.cpp  win_desktop_capture.h
win/hk_audio/: AudioShare.cpp  AudioShare.h  HookCoreApi.cpp  HookCoreApi.h  SimpleAudioFormatConverter.cpp  SimpleAudioFormatConverter.h
win/hk_gpu_lb/: CMakeLists.txt  dll_main.cpp  dllmain.cpp
win/hk_obs/: CMakeLists.txt  app_shared_info_reader.cpp  app_shared_info_reader.h  graphics-hook-info.h  hook_ipc.cpp  hook_ipc.h  hook_manager.cpp  hook_manager.h  ipc_msg_maker.cpp  ipc_msg_maker.h  obfuscate.h  ws_ipc_client.cpp  ws_ipc_client.h
win/hk_obs/graphics/: CMakeLists.txt  d3d11-capture.cpp  d3d12-capture.cpp  d3d8-capture.cpp  d3d9-capture.cpp  dxgi-capture.cpp  gl-capture.c  graphics-hook.c  graphics-hook.cpp  graphics-hook.h  vulkan-capture.c
win/hk_obs/injector/: CMakeLists.txt  inject-helper.c  inject-library.c  inject-library.h
win/hk_obs/ipc_util/: CMakeLists.txt  pipe-windows.h
win/hk_obs/offsets/: CMakeLists.txt  get-graphics-offsets.cpp  get-graphics-offsets.h
win/hk_utils/: apppath_t.h  com_initializer.hpp  env.h  hook_api.hpp  memory.h  module.hpp  protocol.h  scope_exit.hpp  shared_mem_info.h  shellapi.h  string.h  time_measure.hpp
win/hk_video/: CaptureD3D12.cpp  CaptureD3D12.h  HookEvent.cpp  HookEvent.h  SharedTexture.cpp  SharedTexture.h  capture_dxgi.cpp  capture_dxgi.h  capture_dxgi_d3d11.cpp  capture_dxgi_d3d11.h  capture_dxgi_d3d11on12.cpp  capture_dxgi_d3d11on12.h  capture_texture.cpp  capture_texture.h  capturetex.cpp  capturetex.h  d3d_utils.cpp  d3d_utils.h  framework.h  hook_dxgi.cpp  hook_dxgi.h  hook_event.cpp  hook_event.h  shared_texture.cpp  shared_texture.h
win/tests/: CMakeLists.txt  test_audio_capture.cpp
